<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Text Viewer</string>
    <string name="browse_files">Browse Files</string>
    <string name="recent_files">Recent Files</string>
    <string name="no_recent_files">No recent files</string>
    <string name="permission_required">Storage Permission Required</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="table_of_contents">Contents</string>
    <string name="font_size">Font Size</string>
    <string name="night_mode">Night Mode</string>
    <string name="file_not_found">File not found</string>
    <string name="loading">Loading...</string>
    <string name="no_toc">No table of contents</string>
    <string name="folder">Folder</string>
    <string name="html_document">HTML Document</string>
    <string name="pdf_document">PDF Document</string>
    <string name="all">All</string>
    <string name="download">Download</string>
    <string name="documents">Documents</string>
    <string name="storage">Storage</string>
    <string name="select_html">Select HTML File</string>
    <string name="select_pdf">Select PDF File</string>
    <string name="select_document">Select Document</string>
    <string name="cannot_access_directory">Cannot access this directory</string>
    <string name="no_matching_files">No matching files in this directory</string>
    <string name="tap_to_browse">Tap above to browse documents</string>
    <string name="reading_settings">Reading Settings</string>
    <string name="no_pdf_toc">This PDF has no table of contents</string>
    <string name="page_info">Page %1$d of %2$d</string>
    <string name="storage_permission_message">To browse and read document files, please grant storage access permission</string>
    <string name="permission_denied_message">Cannot browse files without storage permission. Please enable it in settings</string>
</resources>
